# gitopolis

./: .editorconfig  .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  Design.md  LICENSE  README.md  ci-tool-setup.sh  cliff.toml  clippy-harsh.sh  deny.toml  lint.sh  package.sh  test.sh  upgrade-crates.sh  upgrade-rust.sh  upgrades.sh
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  feature-implementor.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  cliff.toml  dependabot.yml
.github/workflows/: _ci.yml  _release.yml  build-main.yml  build-pr.yml  build-tag.yml  ci.yml  main.yml  pr.yml  release-win.yml  release.yml  tag.yml
doc/adr/: 0001-exec-command-shell-execution.md  0002-shell-argument-escaping.md  0003-full-subshell-support.md
src/: exec.rs  git.rs  gitopolis.rs  lib.rs  list.rs  main.rs  repos.rs  storage.rs  tag_filter.rs
supply-chain/: config.toml
tests/: end_to_end_tests.rs  gitopolis_tests.rs
