[package]
name = "gitopolis"
version = "0.0.0-git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.9.2"
openssl = { version = "0.10", features = ["vendored"] }
wild = "2.2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20.0"

[package.metadata.cargo-machete]
ignored = [
    "serde",     # Used via serde_derive macro
    "openssl",   # Required by git2 for SSL support
]
