[package]
name = "gitopolis"
version = "0.0.0-git"
edition = "2021"
authors = ["Tim Abell <t@0x5.uk>"]
description = "Manage multiple git repositories - CLI tool - run commands, clone, and organize repos with tags"
homepage = "https://github.com/timabell/gitopolis"
repository = "https://github.com/timabell/gitopolis"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["git", "cli", "multi-repo", "microservices"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.28"
serde = "1.0.228"
serde_derive = "1.0.228"
toml = "0.9.8"
openssl = { version = "0.10", features = ["vendored"] }
wild = "2.2.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23.0"

[package.metadata.cargo-machete]
ignored = [
    "serde",     # Used via serde_derive macro
    "openssl",   # Required by git2 for SSL support
]
